--- a/Shared/Supporting Files/ja.lproj/Localizable.strings
+++ b/Shared/Supporting Files/ja.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "データが無効です";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "「設定」->「プライバシー」->「カメラ」で Brave がデバイスのカメラにアクセスすることを許可してください。";
+"ScanQRCodePermissionErrorMessage" = "「設定」->「プライバシー」->「カメラ」で Dissenter がデバイスのカメラにアクセスすることを許可してください。";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "QR コードをスキャン";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "パスを追加できませんでした";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "アドレスが無効なため Brave はページを開けません。";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "アドレスが無効なため Dissenter はページを開けません。";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "ページを開けません";
