--- a/Shared/Supporting Files/ko-KR.lproj/Localizable.strings
+++ b/Shared/Supporting Files/ko-KR.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "데이터가 유효하지 않습니다.";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "'설정' -> '개인 정보 보호' -> '카메라'에서 Brave가 기기의 카메라에 액세스하는 것을 허용해 주십시오.";
+"ScanQRCodePermissionErrorMessage" = "'설정' -> '개인 정보 보호' -> '카메라'에서 Dissenter가 기기의 카메라에 액세스하는 것을 허용해 주십시오.";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "QR 코드 스캔";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "패스 추가 실패";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "주소가 유효하지 않으므로 Brave에서 페이지를 열 수 없습니다.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "주소가 유효하지 않으므로 Dissenter에서 페이지를 열 수 없습니다.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "페이지를 열 수 없음";
