--- a/Shared/Supporting Files/ms.lproj/Localizable.strings
+++ b/Shared/Supporting Files/ms.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "Data tidak sah";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "Sila benarkan Brave mengakses kamera peranti anda dalam 'Tetapan' -> 'Privasi' -> 'Kamera'.";
+"ScanQRCodePermissionErrorMessage" = "Sila benarkan Dissenter mengakses kamera peranti anda dalam 'Tetapan' -> 'Privasi' -> 'Kamera'.";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "Imbas Kod QR";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "Gagal untuk Menambahkan Pas";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Brave tidak dapat membuka halaman kerana ia mempunyai alamat yang tidak sah.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Dissenter tidak dapat membuka halaman kerana ia mempunyai alamat yang tidak sah.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "Tidak Dapat Membuka Halaman";
