--- a/Shared/Supporting Files/nb.lproj/Localizable.strings
+++ b/Shared/Supporting Files/nb.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "Ugyldig data";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "Vennligst la Brave få tilgang til enhetens kamera i «Innstillinger» -> «Personvern» -> «Kamera».";
+"ScanQRCodePermissionErrorMessage" = "Vennligst la Dissenter få tilgang til enhetens kamera i «Innstillinger» -> «Personvern» -> «Kamera».";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "Skann QR-kode";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "Kunne ikke legge til pass";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Brave kunne ikke åpne siden, da den har en ugyldig adresse.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Dissenter kunne ikke åpne siden, da den har en ugyldig adresse.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "Kan ikke åpne side";
