--- a/Shared/Supporting Files/sv.lproj/Localizable.strings
+++ b/Shared/Supporting Files/sv.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "Ogiltiga data";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "Låt Brave komma åt din enhets kamera genom att gå in på Inställningar-> Sekretess & säkerhet-> Kamera.";
+"ScanQRCodePermissionErrorMessage" = "Låt Dissenter komma åt din enhets kamera genom att gå in på Inställningar-> Sekretess & säkerhet-> Kamera.";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "Skanna QR-kod";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "Kunde inte lägga till pass";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Brave kan inte öppna sidan för att den har en ogiltig adress.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Dissenter kan inte öppna sidan för att den har en ogiltig adress.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "Kan ej öppna sidan";
