--- a/Shared/Supporting Files/uk.lproj/Localizable.strings
+++ b/Shared/Supporting Files/uk.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "Неправильні дані";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "Надайте Brave доступ до камери пристрою в меню «Налаштування» -> «Конфіденційність» -> «Камера».";
+"ScanQRCodePermissionErrorMessage" = "Надайте Dissenter доступ до камери пристрою в меню «Налаштування» -> «Конфіденційність» -> «Камера».";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "Сканування QR-коду";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "Не вдалося додати код";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Неможливо відкрити сторінку в Brave: неправильна адреса.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Неможливо відкрити сторінку в Dissenter: неправильна адреса.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "Неможливо відкрити сторінку";
