--- a/Shared/Supporting Files/zh.lproj/Localizable.strings
+++ b/Shared/Supporting Files/zh.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "数据无效";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "请在“设置”-> “隐私” ->“相机”中允许  Brave 访问您设备的相机。";
+"ScanQRCodePermissionErrorMessage" = "请在“设置”-> “隐私” ->“相机”中允许  Dissenter 访问您设备的相机。";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "扫描二维码";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "无法添加通行证";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Brave 无法打开页面，因为它的地址无效。";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Dissenter 无法打开页面，因为它的地址无效。";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "无法打开页面";
