--- a/Shared/Supporting Files/es.lproj/Localizable.strings
+++ b/Shared/Supporting Files/es.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "ScanQRCodeInvalidDataErrorMessage" = "Los datos no son válidos";
 
 /* Text of the prompt user to setup the camera authorization. */
-"ScanQRCodePermissionErrorMessage" = "Permita a Brave acceder a la cámara de su dispositivo en \"Ajustes\" -> \"Privacidad\" -> \"Cámara\".";
+"ScanQRCodePermissionErrorMessage" = "Permita a Dissenter acceder a la cámara de su dispositivo en \"Ajustes\" -> \"Privacidad\" -> \"Cámara\".";
 
 /* Title for the QR code scanner view. */
 "ScanQRCodeViewTitle" = "Escanear código QR";
@@ -229,8 +229,8 @@
 /* Title of the 'Add Pass Failed' alert. See https://support.apple.com/HT204003 for context on Wallet. */
 "UnableToAddPassErrorTitle" = "Error al añadir tarjeta";
 
-/* The message displayed to a user when they try to open a URL that cannot be handled by Brave, or any external app. */
-"UnableToOpenURLError" = "Brave no puede abrir la página porque la dirección no es válida.";
+/* The message displayed to a user when they try to open a URL that cannot be handled by Dissenter, or any external app. */
+"UnableToOpenURLError" = "Dissenter no puede abrir la página porque la dirección no es válida.";
 
 /* Title of the message shown when the user attempts to navigate to an invalid link. */
 "UnableToOpenURLErrorTitle" = "No se puede abrir la página";
