Updated DisenterShareTo strings
"Open in Dissenter" > "Open in Dissenter.com"

--- a/DissenterShareTo/ms.lproj/InfoPlist.strings
+++ b/DissenterShareTo/ms.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Buka dalam Dissenter";
+"CFBundleDisplayName" = "Buka dalam Dissenter.com";
 
 
 
