--- a/DissenterShareTo/fr.lproj/InfoPlist.strings
+++ b/DissenterShareTo/fr.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Ouvrir dans Dissenter";
+"CFBundleDisplayName" = "Ouvrir dans Dissenter.com";
 
 
 
