--- a/DissenterShareTo/uk.lproj/InfoPlist.strings
+++ b/DissenterShareTo/uk.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Відкрити в Dissenter";
+"CFBundleDisplayName" = "Відкрити в Dissenter.com";
 
 
 
