--- a/Client/zh-TW.lproj/InfoPlist.strings
+++ b/Client/zh-TW.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "這可讓您拍攝並上傳相片。";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave 需要您使用 Face ID，以存取您所儲存的登入資訊。";
+"NSFaceIDUsageDescription" = "Dissenter 需要您使用 Face ID，以存取您所儲存的登入資訊。";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
