--- a/Client/de.lproj/InfoPlist.strings
+++ b/Client/de.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Damit können Sie Fotos aufnehmen und hochladen.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave benötigt Face-ID für den Zugriff auf Ihre gespeicherten Anmeldedaten.";
+"NSFaceIDUsageDescription" = "Dissenter benötigt Face-ID für den Zugriff auf Ihre gespeicherten Anmeldedaten.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
