--- a/Client/es.lproj/InfoPlist.strings
+++ b/Client/es.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Esto le permite realizar y subir fotografías.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave requiere Face ID para acceder a sus inicios de sesión guardados.";
+"NSFaceIDUsageDescription" = "Dissenter requiere Face ID para acceder a sus inicios de sesión guardados.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
