--- a/Client/fr.lproj/InfoPlist.strings
+++ b/Client/fr.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Cette option vous permet de prendre des photos et de les importer.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave nécessite l'utilisation de Face ID pour accéder à vos identifiants enregistrés.";
+"NSFaceIDUsageDescription" = "Dissenter nécessite l'utilisation de Face ID pour accéder à vos identifiants enregistrés.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
