--- a/Client/id-ID.lproj/InfoPlist.strings
+++ b/Client/id-ID.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Ini memungkinkan Anda mengambil dan mengunggah foto.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave memerlukan Face ID untuk mengakses info masuk tersimpan Anda.";
+"NSFaceIDUsageDescription" = "Dissenter memerlukan Face ID untuk mengakses info masuk tersimpan Anda.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
