--- a/Client/it.lproj/InfoPlist.strings
+++ b/Client/it.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Questa impostazione ti permette di scattare e caricare le foto.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave richiede il Face ID per visualizzare gli accessi salvati.";
+"NSFaceIDUsageDescription" = "Dissenter richiede il Face ID per visualizzare gli accessi salvati.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
