--- a/Client/ko-KR.lproj/InfoPlist.strings
+++ b/Client/ko-KR.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "이렇게 하면 사진을 촬영하고 업로드할 수 있습니다.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave에서 저장된 로그인 정보에 액세스하려면 Face ID가 필요합니다.";
+"NSFaceIDUsageDescription" = "Dissenter에서 저장된 로그인 정보에 액세스하려면 Face ID가 필요합니다.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
