--- a/Client/sv.lproj/InfoPlist.strings
+++ b/Client/sv.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Med det här kan du ta foton och ladda upp dem.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Brave kräver Face ID för att komma åt dina sparade inloggningar.";
+"NSFaceIDUsageDescription" = "Dissenter kräver Face ID för att komma åt dina sparade inloggningar.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
