--- a/Client/uk.lproj/InfoPlist.strings
+++ b/Client/uk.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Це дозволить вам завантажувати фото.";
 
 /* Privacy - Face ID Usage Description */
-"NSFaceIDUsageDescription" = "Щоб надати Brave доступ до збережених облікових даних, уведіть Face ID.";
+"NSFaceIDUsageDescription" = "Щоб надати Dissenter доступ до збережених облікових даних, уведіть Face ID.";
 
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
